# llm-phase-bench

./: .gitignore  README.md  pyproject.toml
configs/benchmark/: cpu.yaml  cuda.yaml  local-smoke.yaml
src/llm_phase_bench/: __init__.py  cli.py  console.py
src/llm_phase_bench/benchmark/: __init__.py  metrics.py  orchestrator.py  rpi_runner.py  runner.py  schema.py  timing.py
src/llm_phase_bench/config/: __init__.py  schema.py
src/llm_phase_bench/data/: __init__.py  dataset.py  prompting.py
src/llm_phase_bench/models/: __init__.py  loader.py
src/llm_phase_bench/reporting/: __init__.py  aggregator.py  export.py  plotting.py  statistics.py
src/llm_phase_bench/utils/: __init__.py  device.py  jsonl.py
