[project]
name = "llm-phase-bench"
version = "0.1.0"
description = "LLM inference benchmarking framework for small models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10,<2.11",
    "transformers>=4.48",
    "datasets>=3.2",
    "accelerate>=1.2",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "rich>=13.9",
    "bitsandbytes>=0.45; sys_platform == 'linux'",
    "flash-attn>=2.7; sys_platform == 'linux'",
]

[project.optional-dependencies]
viz = ["seaborn>=0.13", "matplotlib>=3.9", "pandas>=2.2"]
rpi = ["llama-cpp-python>=0.3"]

[project.scripts]
benchmark = "llm_phase_bench.cli:main"

[dependency-groups]
dev = ["ruff>=0.11", "ty>=0.0.1a7"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicts with ruff formatter
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "W191",   # tab-indentation

    # Docstring style conflicts
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)

    # Exception messages
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "TRY003", # Avoid specifying long messages outside the exception class

    # TODOs
    "FIX002", # Line contains TODO
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO

    # Boolean arguments
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition

    # Naming conventions
    "N812", # Lowercase imported as non-lowercase (ML convention: L, F)
    "N818", # Exception name should be named with an Error suffix

    # Pylint rules
    "PLR0911", # too-many-return-statements
    "PLR2004", # magic-value-comparison

    # Type narrowing
    "S101", # Use of assert

    # Docstrings — not required everywhere
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__

    # Framework callback signatures
    "ARG002", # Unused method argument

    # Manual review
    "ANN401",  # Dynamically typed expressions (typing.Any)
    "PLC0415", # import-outside-top-level
    "PLR0915", # too-many-statements
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "SLF001"]
"src/llm_phase_bench/benchmark/rpi_runner.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
flash-attn = [
    { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.1/flash_attn-2.8.1%2Bcu12torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
